Update app for 6.5

--- a/logfiletest/logfiletest.vcxproj
+++ b/logfiletest/logfiletest.vcxproj
@@ -140,23 +140,23 @@
     <ClInclude Include="experimental\ProcDamageRegister.h" />
     <ClInclude Include="experimental\skilldamagestats.h" />
     <ClInclude Include="experimental\WeaponSwitch.h" />
-    <ClInclude Include="gui\apframe.h" />
-    <ClInclude Include="gui\expframe.h" />
-    <ClInclude Include="gui\gpframe.h" />
-    <ClInclude Include="gui\itemacquisitionframe.h" />
-    <ClInclude Include="gui\itembundleframe.h" />
-    <ClInclude Include="gui\itemconsumptionframe.h" />
-    <ClInclude Include="gui\itemrollsframe.h" />
-    <ClInclude Include="gui\kinahframe.h" />
-    <ClInclude Include="gui\listctrlframe.h" />
-    <ClInclude Include="gui\mainframe.h" />
-    <ClInclude Include="gui\mobkillsframe.h" />
+    <ClInclude Include="gui\ApFrame.h" />
+    <ClInclude Include="gui\ExpFrame.h" />
+    <ClInclude Include="gui\GpFrame.h" />
+    <ClInclude Include="gui\ItemAcquisitionFrame.h" />
+    <ClInclude Include="gui\ItemBundleFrame.h" />
+    <ClInclude Include="gui\ItemConsumptionFrame.h" />
+    <ClInclude Include="gui\ItemRollsFrame.h" />
+    <ClInclude Include="gui\KinahFrame.h" />
+    <ClInclude Include="gui\ListCtrlFrame.h" />
+    <ClInclude Include="gui\MainFrame.h" />
+    <ClInclude Include="gui\MobKillsFrame.h" />
     <ClInclude Include="gui\ModulePanel.h" />
-    <ClInclude Include="gui\modulewindowselectionframe.h" />
-    <ClInclude Include="gui\playerkillsframe.h" />
-    <ClInclude Include="gui\professionframe.h" />
-    <ClInclude Include="gui\professionlevelingframe.h" />
-    <ClInclude Include="gui\testframe.h" />
+    <ClInclude Include="gui\ModuleWindowSelectionFrame.h" />
+    <ClInclude Include="gui\PlayerKillsFrame.h" />
+    <ClInclude Include="gui\ProfessionFrame.h" />
+    <ClInclude Include="gui\ProfessionLevelingFrame.h" />
+    <ClInclude Include="gui\TestFrame.h" />
     <ClInclude Include="language\EnglishEU.h" />
     <ClInclude Include="language\EnglishNA.h" />
     <ClInclude Include="language\language.h" />
@@ -164,6 +164,7 @@
     <ClInclude Include="lookups\ApChart.h" />
     <ClInclude Include="lookups\CommandStringsEUEnglish.h" />
     <ClInclude Include="lookups\CommandStringsNAEnglish.h" />
+    <ClInclude Include="lookups\ExpChart60.h" />
     <ClInclude Include="lookups\ExpChartEU49.h" />
     <ClInclude Include="lookups\ExpChartKR51.h" />
     <ClInclude Include="lookups\ExpChartNA40.h" />
@@ -251,6 +252,7 @@
     <ClCompile Include="lookups\ApChart.cpp" />
     <ClCompile Include="lookups\CommandStringsEUEnglish.cpp" />
     <ClCompile Include="lookups\CommandStringsNAEnglish.cpp" />
+    <ClCompile Include="lookups\ExpChart60.cpp" />
     <ClCompile Include="lookups\ExpChartEU49.cpp" />
     <ClCompile Include="lookups\ExpChartKR51.cpp" />
     <ClCompile Include="lookups\ExpChartNA40.cpp" />
